--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta property="og:image" content="https://fabiocambula.github.io/TicTacToe-game/assets/gamePic.png">
     <meta property="og:url" content="https://fabiocambula.github.io/TicTacToe/">
     <meta property="og:type" content="website">
-    <link rel="apple-touch-icon" sizes="180x180" href="/TicTacToe-Game/src/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/TicTacToe-Game/src/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/TicTacToe-Game/src/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/TicTacToe-Game/src/assets/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="src/assets/favicon/site.webmanifest">
     <title>TicTacToe</title>
   </head>
   <body>
